--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -15,7 +15,7 @@
                     <field name="manifest_number" invisible="1"/>
                     <field name="shipper_facility_name"/>
                     <field name="shipper_facility_license_number"/>
-                    <field name="shipment_package_state"/>
+                    <field name="shipment_package_state" invisible="1"/>
                 </tree>
             </field>
         </record>
@@ -206,7 +206,7 @@
             <field name="name">Ready Transfers</field>
             <field name="res_model">metrc.transfer</field>
             <field name="view_mode">tree,form</field>
-            <field name="domain">[('move_line_id', '=', False)]</field>
+            <field name="domain">[('move_line_id', '=', False), ('manifest_status', '=', 'Ready')]</field>
             <field name="context">{
                 'search_default_groupby_src_license': 1,
                 'search_default_groupby_manifest': 1}</field>
@@ -222,7 +222,7 @@
             <field name="name">Partial Transfers</field>
             <field name="res_model">metrc.transfer</field>
             <field name="view_mode">tree,form</field>
-            <field name="domain">[('manifest_state', '=', 'Partial')]</field>
+            <field name="domain">[('manifest_status', '=', 'Partial')]</field>
             <field name="context">{
                 'search_default_groupby_src_license': 1,
                 'search_default_groupby_manifest': 1}</field>
