--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -42,7 +42,7 @@
                     <span style="margin: 5px;"/>
                     <button name="open_notes" string="Notes" class="btn-primary oe_edit_only" type="object" />
                 </field>
-                <xpath expr="//control" position="replace"></xpath>
+                <!-- <xpath expr="//control" position="replace"></xpath> -->
                 <!-- <field name="order_line" position="attributes">
                     <attribute name="widget">so_section_and_note</attribute>
                   </field> -->
@@ -64,7 +64,7 @@
                 <xpath expr="(//header/button[@name='action_confirm'])[2]" position="replace">
                 </xpath>
                 <xpath expr="(//header/button[@name='action_confirm'])[1]" position="attributes">
-                    <attribute name="attrs"></attribute>
+                    <attribute name="attrs">{'invisible': [('state', 'not in', ['sale','done'])]}</attribute>
                 </xpath>
                 <xpath expr="//header/button[@name='action_cancel']" position="attributes">
                     <attribute name="string">Abandon Cart</attribute>
@@ -106,7 +106,7 @@
                     <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}'/> -->
                     <templates>
                         <t t-name="kanban-box">
-                            <div t-attf-class="oe_kanban_card oe_kanban_global_click">
+                            <div t-attf-class="oe_kanban_card oe_kanban_global_click" style="width: 25%;">
                                 <div class="o_kanban_record_top mb16">
                                     <div class="o_kanban_record_headings mt4">
                                         <strong class="o_kanban_record_title">
@@ -212,7 +212,7 @@
                                 <div class="o_kanban_record_bottom">
                                     <div class="oe_kanban_bottom_left" style="align-self: flex-end;">
                                         <strong>
-                                            <span>Fulfillment Type Here</span>
+                                            <span><field name="fulfillment_type"/></span>
                                         </strong>
                                         <!-- <field name="activity_ids" widget="kanban_activity"/> -->
                                     </div>
