--- a/lume_sales/views/project.xml
+++ b/lume_sales/views/project.xml
@@ -13,7 +13,7 @@
            <!-- Needed field tag to access the model field later in this view -->
           <xpath expr="/kanban/field" position="after">
             <field name="fulfillment_type"/>
-            <!-- <field name="order_type"/> -->
+            <field name="order_type"/>
             <field name="fulfillment_type"/>
             <field name="blink_threshold"/>
           </xpath>
