--- a/lume_sales/views/partner.xml
+++ b/lume_sales/views/partner.xml
@@ -44,10 +44,10 @@
           <attribute name="string">Customer Groups</attribute>
           <attribute name="placeholder">Groups...</attribute>
         </field>
-        <field name="category_id" position="before">
+        <!-- <field name="category_id" position="before"> -->
           <!-- <field name="caregiver"/> -->
           <!-- <field name="caregiver_number" string="Caregiver ID"/> -->
-        </field>
+        <!-- </field> -->
         <field name="category_id" position="after">
           <field name="passport" />
         </field>
@@ -121,14 +121,14 @@
             </tree>
           </field>
         </field>
-        <field name="comment" position="before">
+        <xpath expr="//notebook/page[@name='internal_notes']/*" position="before">
           <field name="note_ids">
             <tree>
               <field name="message"/>
               <field name="logged_partner_id"/>
             </tree>
           </field>
-        </field>
+        </xpath>
         <field name="phone" position="attributes">
           <attribute name="required">1</attribute>
         </field>
