--- a/lume_sales/views/sale.xml
+++ b/lume_sales/views/sale.xml
@@ -26,7 +26,7 @@
                 </field>
                 <xpath expr="//tree/field[@name='product_id']" position="replace">
                     <field name="order_type" invisible="1"></field>
-                    <field name="product_id" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" options="{'no_open': True}" force_save="1" context="{'partner_id': parent.partner_id,'quantity': product_uom_qty,'pricelist': parent.pricelist_id,'uom':product_uom,'company_id': parent.company_id,'default_lst_price': price_unit,'default_description_sale': name}" domain="[('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', company_id),('thc_type','=',order_type),('type','!=','service')]" widget="product_configurator" />
+                    <field name="product_id" attrs="{'readonly': [('product_updatable', '=', False)],'required': [('display_type', '=', False)],}" options="{'no_open': True,'no_create':True}" force_save="1" context="{'partner_id': parent.partner_id,'quantity': product_uom_qty,'pricelist': parent.pricelist_id,'uom':product_uom,'company_id': parent.company_id,'default_lst_price': price_unit,'default_description_sale': name}" domain="[('sale_ok', '=', True), '|', ('company_id', '=', False), ('company_id', '=', company_id),('thc_type','in',['medical','adult','merch'] if order_type == 'none' else [order_type, 'merch']),('type','!=','service')]" widget="product_configurator" />
                 </xpath>
                 <xpath expr="//tree/field[@name='product_uom_qty']" position="attributes">
                     <attribute name="widget">qty_widget</attribute>
@@ -64,10 +64,20 @@
                 <xpath expr="(//header/button[@name='action_confirm'])[2]" position="replace">
                 </xpath>
                 <xpath expr="(//header/button[@name='action_confirm'])[1]" position="attributes">
-                    <attribute name="attrs"></attribute>
+                    <attribute name="attrs">{'invisible': [('state', 'in', ['sale','done'])]}</attribute>
                 </xpath>
                 <xpath expr="//header/button[@name='action_cancel']" position="attributes">
                     <attribute name="string">Abandon Cart</attribute>
+                </xpath>
+                <xpath expr="(//header/button[@name='action_quotation_send'])[4]" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <!-- Invoice buttons -->
+                <xpath expr="(//header/button)[3]" position="attributes">
+                    <attribute name="invisible">1</attribute>
+                </xpath>
+                <xpath expr="(//header/button)[4]" position="attributes">
+                    <attribute name="invisible">1</attribute>
                 </xpath>
                 <!-- Not sure about this next one -->
                 <xpath expr="(//header/field)[2]" position="attributes">
@@ -106,7 +116,7 @@
                     <progressbar field="activity_state" colors='{"planned": "success", "today": "warning", "overdue": "danger"}'/> -->
                     <templates>
                         <t t-name="kanban-box">
-                            <div t-attf-class="oe_kanban_card oe_kanban_global_click">
+                            <div t-attf-class="oe_kanban_card oe_kanban_global_click" style="width: 25%;">
                                 <div class="o_kanban_record_top mb16">
                                     <div class="o_kanban_record_headings mt4">
                                         <strong class="o_kanban_record_title">
@@ -212,7 +222,7 @@
                                 <div class="o_kanban_record_bottom">
                                     <div class="oe_kanban_bottom_left" style="align-self: flex-end;">
                                         <strong>
-                                            <span>Fulfillment Type Here</span>
+                                            <span><field name="fulfillment_type"/></span>
                                         </strong>
                                         <!-- <field name="activity_ids" widget="kanban_activity"/> -->
                                     </div>
