--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -5,17 +5,32 @@
             <field name="name">metrc.transfer.tree</field>
             <field name="model">metrc.transfer</field>
             <field name="arch" type="xml">
-                <tree string="Metrc Transfers">
+                <tree string="Metrc Transfers" editable="bottom">
                     <field name="src_license" invisible="1"/>
                     <field name="transfer_type" invisible="1"/>
                     <field name="move_line_id" invisible="1"/>
-                    <field name="product_name"/>
-                    <field name="product_id" string="Odoo Product"/>
-                    <field name="package_label"/>
-                    <field name="manifest_number" invisible="1"/>
-                    <field name="shipper_facility_name"/>
-                    <field name="shipper_facility_license_number"/>
+                    <field name="product_name" readonly="1"/>
+                    <field name="product_category_name" invisible="1"/>
+                    <field name="package_label" readonly="1"/>
+                    <field name="alias_products" invisible="1"/>
                     <field name="shipment_package_state" invisible="1"/>
+                    <field name="product_id" string="Odoo Product" 
+                           domain="['|', ('id', 'in', alias_products),
+                                    ('uom_id.name', '=', received_unit_of_measure_name),
+                                    ('metrc_item_cat_id.name', '=', product_category_name)]"
+                           attrs="{'readonly': [('shipment_package_state', '!=', 'Accepted')]}"/>
+                    <field name="manifest_number" invisible="1"/>
+                    <field name="received_quantity" string="Total Received" readonly="1"/>
+                    <field name="received_unit_of_measure_name" string="Received UOM" readonly="1"/>
+                    <field name="shipper_facility_name" string="shipper Facility" readonly="1"/>
+                    <field name="shipper_facility_license_number" string="Shipper License" readonly="1"/>
+                    <field name="is_flower" invisible="1"/>
+                    <field name="is_edible" invisible="1"/>
+                    <field name="harvest_date" attrs="{'readonly': [('is_flower', '=', False)]}"/>
+                    <field name="expiration_date" attrs="{'readonly': [('is_edible', '=', False)]}"/>
+                    <field name="thc_percent" attrs="{'readonly': [('is_flower', '=', False)]}"/>
+                    <field name="thc_mg" attrs="{'readonly': [('is_edible', '=', False)]}"/>
+                    <button name="open_transfer" type="object" icon="fa-external-link"/>
                 </tree>
             </field>
         </record>
