--- a/lume_sales/views/promo.xml
+++ b/lume_sales/views/promo.xml
@@ -9,8 +9,8 @@
                     <label string="Recurring" for="recurring" class="oe_inline"/>
                     <div>
                         <field name="recurring"/>
-                        <field name="recurring_cycle" style="width: auto !important;"/>
-                        <field name="recurring_day" style="padding-left:10px;"/>
+                        <field name="recurring_cycle" attrs="{'invisible': [('recurring', '=', False)], 'required':[('recurring','=',True)]}" style="width: auto !important;"/>
+                        <field name="recurring_day" attrs="{'invisible': [('recurring', '=', False)]" style="padding-left:10px;"/>
                     </div>
                 </field>
             </field>
