--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -208,7 +208,7 @@
             <field name="model">stock.picking</field>
             <field name="inherit_id" ref="stock.view_picking_internal_search"/>
             <field name="arch" type="xml">
-                <filter name="expected_date" position="after"/>
+                <filter name="expected_date" position="after">
                     <filter string="Manifest" name="groupby_manifest" domain="[]" context="{'group_by': 'manifest_number'}"/>
                 </filter>
             </field>
