--- a/lume_sales/views/promo.xml
+++ b/lume_sales/views/promo.xml
@@ -6,7 +6,7 @@
             <field name="inherit_id" ref="coupon.coupon_program_view_promo_program_form" />
             <field name="arch" type="xml">
                 <field name="rule_date_from" position="before">
-                    <field name="stackablility"/>
+                    <field name="stackability"/>
                     <field name="stackable_with" attrs="{'invisible': [('stackability','=','not stackable')],'required': [('stackability','=','not stackable')]}"/>
                     <label string="Recurring" for="recurring" class="oe_inline"/>
                     <div>
