--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -19,7 +19,7 @@
                                     ('uom_id.name', '=', received_unit_of_measure_name),
                                     ('metrc_item_cat_id.name', '=', product_category_name)]"
                            attrs="{'readonly': ['|', ('shipment_package_state', '!=', 'Accepted'),
-                                  ('transfer_type', '!=', 'Incoming')]}"/>
+                                  ('transfer_type', '!=', 'incoming')]}"/>
                     <field name="manifest_number" invisible="1"/>
                     <field name="received_quantity" string="Total Received" readonly="1"/>
                     <field name="received_unit_of_measure_name" string="Received UOM" readonly="1"/>
