[IMP] If the manifest status of the tranfer is accepted then user can not edit that.

--- a/metrc_stock/views/metrc_transfer_view.xml
+++ b/metrc_stock/views/metrc_transfer_view.xml
@@ -5,7 +5,9 @@
             <field name="name">metrc.transfer.tree</field>
             <field name="model">metrc.transfer</field>
             <field name="arch" type="xml">
-                <tree string="Metrc Transfers" create="0" edit="1" editable="bottom">
+                <tree string="Metrc Transfers" create="0" 
+                      edit="1" editable="bottom"
+                      decoration-warning="product_id == False">
                     <field name="src_license" invisible="1"/>
                     <field name="transfer_type" invisible="1"/>
                     <field name="move_line_id" invisible="1"/>
@@ -14,12 +16,14 @@
                     <field name="package_label" readonly="1"/>
                     <field name="alias_products" invisible="1"/>
                     <field name="shipment_package_state" invisible="1"/>
+                    <field name="manifest_status" invisible="1"/>
                     <field name="product_id" string="Odoo Product" 
                            domain="['|', ('id', 'in', alias_products),
                                     ('uom_id.name', '=', received_unit_of_measure_name),
                                     ('metrc_item_cat_id.name', '=', product_category_name)]"
                            attrs="{'readonly': ['|', ('shipment_package_state', '!=', 'Accepted'),
-                                  ('transfer_type', '!=', 'incoming')]}"/>
+                                  '|', ('transfer_type', '!=', 'incoming'),
+                                  ('manifest_status', '=', 'Accepted')]}"/>
                     <field name="manifest_number" invisible="1"/>
                     <field name="received_quantity" string="Total Received" readonly="1"/>
                     <field name="received_unit_of_measure_name" string="Received UOM" readonly="1"/>
