--- a/lume_sales/views/promo.xml
+++ b/lume_sales/views/promo.xml
@@ -1,4 +1,4 @@
-<odoo>
+<!-- <odoo>
     <data>
         <record id="coupon_program_inherit" model="ir.ui.view">
             <field name="name">coupon.program.inherit</field>
@@ -23,4 +23,4 @@
             </field>
         </record>
     </data>
-</odoo>
+</odoo> -->
